# Telegram-115bot

./: .gitignore  Dockerfile  Dockerfile.local  create_tg_session_file.py  pyproject.toml  requirements.txt
.claude/plan/: fix-ty-check.md  http-retry-backoff.md  pydantic-type-hints-migration.md  type-hints-completion.md
.github/workflows/: docker-build.yml  docker-build.yml.bak  docker-publish.yml
app/: 115bot.py  __init__.py  __main__.py  init.py
app/core/: av_daily_update.py  javbus.py  offline_task_retry.py  open_115.py  scheduler.py  sehua_spider.py  selenium_browser.py  subscribe_movie.py  t66y.py  video_downloader.py
app/handlers/: aria2_handler.py  auth_handler.py  av_download_handler.py  crawl_handler.py  download_handler.py  offline_task_handler.py  rss_handler.py  subscribe_movie_handler.py  sync_handler.py  video_handler.py
app/models/: __init__.py  base.py  config.py  context.py  db.py  dto.py  enums.py
app/utils/: ai.py  alioss.py  aria2.py  cover_capture.py  fast_telethon.py  http_client.py  logger.py  message_queue.py  ptb_helpers.py  sqlitelib.py  utils.py
legacy/: client_115.py  subscribe.py  subscribe_handler.py
