[project]
name = "telegram-115bot"
version = "3.5.4"
description = "Telegram bot for 115 cloud storage management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "alibabacloud-oss-v2==1.1.2",
    "apscheduler==3.11.0",
    "beautifulsoup4>=4.13.5",
    "httpx>=0.28.1",
    "seleniumbase==4.45.7",
    "python-telegram-bot==22.7",
    "pyyaml>=6.0.2",
    "qrcode==8.2",
    "requests==2.32.5",
    "telethon[cryptg]==1.40.0",
    "tenacity>=9.1.2",
    "urllib3==2.5.0",
    "pillow==11.2.1",
    "aria2p==0.12.1",
    "pysocks==1.7.1",
    "pydantic>=2.0",
    "socksio>=1.0.0"
]

[project.scripts]
telegram-115bot = "app.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ty.src]
include = ["app", "create_tg_session_file.py"]

[tool.ty.analysis]
# telethon uses heavy metaprogramming that confuses static type checkers
replace-imports-with-any = ["telethon.**"]

# ConversationHandler generic parameters and TelegramClient kwargs
# cause unavoidable type friction with strict checking
[[tool.ty.overrides]]
include = ["app/handlers/*.py"]
[tool.ty.overrides.rules]
invalid-argument-type = "warn"

[[tool.ty.overrides]]
include = ["create_tg_session_file.py"]
[tool.ty.overrides.rules]
invalid-argument-type = "warn"
invalid-await = "warn"